...
            "state" : "translated",
            "value" : "背景重新整理"
          }
        }
      }
    },
    "Backup" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Backup"
          }
...
            "state" : "translated",
            "value" : "罐"
          }
        }
      }
    },
    "Choose from Library" : {
      "comment" : "The option of choosing a photo from photo library",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Choose from Library"
...
            "state" : "translated",
            "value" : "從圖庫選擇"
          }
        }
      }
    },
    "Close" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Close"
          }
...
            "state" : "translated",
            "value" : "自訂您接收有關緊急資源提醒的時間和頻率"
          }
        }
      }
    },
    "Daily Notification Time" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Daily Notification Time"
          }
...
            "state" : "translated",
            "value" : "到期前天數"
          }
        }
      }
    },
    "Delete" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
...
            "state" : "translated",
            "value" : "找不到 UUID 為 %@ 的緊急避難包。"
          }
        }
      }
    },
    "Emergency Kits" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Emergency Kits"
          }
...
            "state" : "translated",
            "value" : "偵測到即將過期的物品"
          }
        }
      }
    },
    "Export Database Files" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Export Database Files"
          }
...
            "state" : "translated",
            "value" : "針對無到期日的物品，您將會收到以下頻率的檢查提醒：\n\n• 每季：一月、四月、七月和十月的第一天。\n• 每半年：一月和七月的第一天。\n• 每年：一月的第一天。"
          }
        }
      }
    },
    "Import Database Files" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Import Database Files"
          }
...
            "state" : "translated",
            "value" : "找不到要備份的資料庫檔案"
          }
        }
      }
    },
    "No Emergency Kits Yet" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "No Emergency Kits Yet"
          }
...
            "state" : "translated",
            "value" : "選取的檔案不是有效的資料庫檔案"
          }
        }
      }
    },
    "Settings" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
...
